apps/jdconley-site/css/jdconley-com.webflow.css
/* ... */
.page-style-guide {
  padding: 5% 12% 8%;
}

.label-class {
  color: #fff;
  background-color: #a95889;
  border-radius: .4em;
  margin-top: 2em;
  padding: .5em .6em;
  font-size: .8em;
  font-weight: 300;
  line-height: 1;
  display: inline-block;
}

.label-class.blue {
  background-color: #4b78bd;
}

.all-texts {
  grid-column-gap: 0em;
  grid-row-gap: 1em;
  grid-template-rows: auto auto;
  grid-template-columns: 1fr;
  grid-auto-columns: 1fr;
  grid-auto-flow: column;
  justify-items: start;
  margin-bottom: 2em;
  display: grid;
}

.all-lists {
  grid-column-gap: 0em;
  grid-row-gap: 1em;
  grid-template-rows: auto auto;
  grid-template-columns: 1fr;
  grid-auto-columns: 1fr;
  grid-auto-flow: column;
  place-items: start;
  margin-bottom: 2em;
  display: grid;
}

.utility-page-wrap {
  align-items: center;
  width: 100%;
  max-width: 320px;
  min-height: 100vh;
  margin-left: auto;
  margin-right: auto;
  display: flex;
}

.span-heading {
  opacity: .5;
  letter-spacing: 0;
  font-size: 20px;
  font-weight: 400;
}

.service-page {
  max-width: 880px;
  margin-left: auto;
  margin-right: auto;
  padding: 5% 12% 8%;
}

.sections {
  width: 100%;
}

.nav-link {
  color: #111;
  text-align: left;
  letter-spacing: -.01em;
  border-top-right-radius: .2em;
  border-bottom-right-radius: .2em;
  justify-content: flex-start;
  align-items: baseline;
  margin: .2em 0 .1em;
  padding: .5em 1em .5em .8em;
  font-weight: 700;
  line-height: 1;
  transition: color .2s, background-color .2s;
  display: flex;
}

.nav-link.w--current {
  color: #fff;
  background-color: #222;
}

.navbar-logo {
  color: #111;
  justify-content: flex-start;
  align-items: center;
  margin-top: 2.5em;
  margin-bottom: 1em;
  margin-left: 10%;
  display: flex;
}

.navbar-logo.w--current {
  flex-flow: column;
}

.logo {
  border-radius: 50%;
  margin-right: .7em;
}

.nav-menu {
  flex-direction: column;
  flex: 1;
  justify-content: center;
  align-items: flex-start;
  font-size: .75em;
  display: flex;
}

.nav-menu.small {
  font-size: .5em;
}

.nav-number {
  opacity: .5;
  text-align: right;
  min-width: 1.5em;
  margin-left: 2em;
  margin-right: 1em;
  font-size: .8em;
  font-weight: 500;
}

.nav-number.hide {
  opacity: 0;
}

.section {
  background-color: var(--white);
  min-height: 100vh;
  padding-top: 10vh;
  padding-bottom: 10vh;
  padding-left: 34%;
}

.section.hello {
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  padding-left: 38%;
  display: flex;
}

.section.service {
  padding-top: 15vh;
  overflow: hidden;
}

.section.last-project {
  flex-direction: row;
  align-items: flex-start;
  padding-top: 0;
  padding-left: 28%;
  display: flex;
}

.section.quotes {
  flex-direction: column;
  align-items: flex-start;
  padding-bottom: 5vh;
  display: flex;
}

.section.skils {
  flex-wrap: wrap;
  place-content: center space-around;
  padding-left: 25%;
  display: flex;
}

.section.projects {
  flex-wrap: wrap;
  place-content: flex-start space-around;
  align-items: stretch;
  padding-left: 25%;
  display: flex;
  position: relative;
}

.section.tools {
  flex-wrap: wrap;
  justify-content: flex-start;
  align-items: stretch;
  padding-top: 20vh;
  padding-bottom: 20vh;
  display: flex;
}

.section.blog {
  padding-top: 20vh;
}

.section.subscribe {
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  display: flex;
}

.section.bio {
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
  padding-top: 0;
  display: flex;
}

.section.contact {
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  display: flex;
  overflow: hidden;
}

.section.follow {
  flex-flow: wrap;
  align-content: center;
  padding-top: 20vh;
  padding-bottom: 20vh;
  display: flex;
}

.section.contact-form {
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  display: flex;
}

.section.clients {
  padding-top: 15vh;
  padding-bottom: 15vh;
}

.section.blog-page, .section.gallery {
  padding-left: 25%;
}

.section.faq {
  padding-left: 30%;
  display: flex;
}

.section.footer {
  flex-direction: column;
  justify-content: center;
  padding-left: 45%;
  display: flex;
}

.section.rich-text {
  padding-top: 20vh;
  padding-bottom: 20vh;
}

.section-heading {
  letter-spacing: .2em;
  text-transform: uppercase;
  font-size: .8em;
  font-weight: 300;
  display: none;
}

.navbar {
  z-index: 999;
  flex-direction: column;
  align-items: flex-start;
  width: 25%;
  height: 100vh;
  display: flex;
  position: fixed;
  top: 0;
}

.navbar-button {
  flex-direction: column;
  justify-content: center;
  align-items: center;
  display: none;
  position: relative;
}

.menu {
  font-size: 1em;
  line-height: 1;
}

.menu.close {
  display: none;
}

.nav-text.buy {
  color: var(--medium-slate-blue);
}

.hello-title-wrap {
  border-bottom: 1px solid #0000002e;
  overflow: hidden;
}

.hello-title {
  line-height: 1.6;
}

.hello-photo {
  border-radius: .1em;
  width: 6em;
  height: 7.5em;
  margin-top: -1em;
  margin-bottom: 2em;
  margin-left: -3em;
  overflow: hidden;
}

.based-in-label {
  color: #222;
  letter-spacing: -.02em;
  background-image: url('../images/map-pin-2.svg');
  background-position: 7%;
  background-repeat: no-repeat;
  background-size: auto;
  border: 1px solid #0000002e;
  border-radius: .5em;
  margin-left: .6em;
  padding: .3em .6em .3em 2em;
  display: inline-block;
}

.based-in {
  color: #777;
  letter-spacing: -.01em;
  align-items: center;
  margin-top: 3em;
  font-size: .8em;
  display: flex;
}

.services-item {
  border-bottom: 1px solid #0000001f;
  align-items: center;
  margin-left: auto;
  padding-top: 2.5em;
  padding-bottom: 2.5em;
  display: flex;
}

.services-item.last {
  border-bottom-width: 0;
  width: 100%;
  padding-left: 4.5em;
}

.services-item-icon {
  object-fit: cover;
  border-radius: 50%;
  width: 2.5em;
  height: 2.5em;
  margin-right: 2em;
}
/* ... */

